--- a/DaisyDos/DaisyDos.entitlements
+++ b/DaisyDos/DaisyDos.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.dante.DaisyDos</string>
+		<string>iCloud.com.yourteam.DaisyDos</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
