--- a/.gitignore
+++ b/.gitignore
@@ -34,40 +34,8 @@ DerivedData/
 timeline.xctimeline
 playground.xcworkspace
 
-# Swift Package Manager
-#
-# Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
-# Packages/
-# Package.pins
-# Package.resolved
-# *.xcodeproj
-#
-# Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata dir, do not ignore
-# *.xcworkspace
-
+# Swift Package Manager - only ignore build artifacts
 .build/
-
-# CocoaPods
-#
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
-#
-# Pods/
-#
-# Add this line if you want to avoid checking in source code from the Xcode workspace
-# *.xcworkspace
-
-# Carthage
-#
-# Add this line if you want to avoid checking in source code from Carthage dependencies.
-# Carthage/Checkouts
-
-Carthage/Build/
-
-# Accio dependency management
-Dependencies/
-.accio/
 
 # fastlane
 #
@@ -118,6 +86,7 @@ Temporary Items
 *.sqlite
 *.sqlite-wal
 *.sqlite-shm
+*.sqlite-journal
 
 # CloudKit local cache (development)
 .cloudkit/
@@ -128,8 +97,12 @@ GeneratedAssetSymbols.swift
 # Testing and coverage
 *.gcda
 *.gcno
+*.xcresult
 test_output/
+TestResults/
+test_results/
 coverage/
+.swifttest/
 
 # Documentation generated files
 docs/generated/
@@ -186,17 +159,9 @@ logs/
 
 # Profiling
 *.trace
+*.dtps
+*.instruments
 Instruments/
 
-# SwiftLint
-.swiftlint.yml.tmp
-
-# R.swift
-*.generated.swift
-
-# Sourcery
-Templates/
-
-# Firebase
-GoogleService-Info.plist
-google-services.json
+# Xcode Cloud
+*.xctestplan
