Investigation: Fixed test double-execution, identified SwiftData container issue
ROOT CAUSE IDENTIFIED:
The 0.000s test failures were caused by TWO separate issues:

1. Xcode Scheme Parallelization (FIXED ✅)
   - Test target had parallelizable="YES" in scheme
   - Caused test suites to run twice simultaneously
   - Fixed by setting parallelizable="NO" in DaisyDos.xcscheme

2. Swift Testing Suite Parallelization (FIXED ✅)
   - Two test suites (TaskActorTests, DaisyDosArchitectureTests) ran in parallel
   - Even with .serialized, they executed simultaneously
   - Fixed by wrapping both in parent @Suite(.serialized) struct AllTests

3. SwiftData ModelContainer Creation (PARTIALLY FIXED ⚠️)
   - Schema-based initialization caused loadIssueModelContainer error
   - Fixed by using direct model type initialization
   - Single tests now PASS
   - Multiple sequential containers still fail (SwiftData limitation)

Changes:
- DaisyDos.xcscheme: Disabled test parallelization (parallelizable="NO")
- TaskActorTests.swift: Wrapped in AllTests parent suite
- DaisyDosArchitectureTests.swift: Wrapped in AllTests parent suite
- TestHelpers.swift: Simplified ModelContainer creation API

Current Status:
✅ Individual tests pass when run alone
✅ No more double execution (tests run once)
✅ Tests get past 0.000s (now 0.001s with real execution)
❌ Sequential container creation still fails with loadIssueModelContainer

This appears to be a SwiftData/iOS Simulator limitation where rapid in-memory
ModelContainer creation overwhelms the system, even when fully serialized.

Next Investigation Areas:
- Reuse single ModelContainer across tests (trade isolation for stability)
- Add delays between container creations
- Use XCTest instead of Swift Testing
- Test on physical device vs simulator

Related: TESTING_MIGRATION_PLAN.md, Issue #swift-testing-swiftdata-compat

--- a/DaisyDos.xcodeproj/xcshareddata/xcschemes/DaisyDos.xcscheme
+++ b/DaisyDos.xcodeproj/xcshareddata/xcschemes/DaisyDos.xcscheme
@@ -32,7 +32,7 @@
       <Testables>
          <TestableReference
             skipped = "NO"
-            parallelizable = "YES">
+            parallelizable = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "FE3537A42E830152007B0F25"
@@ -43,7 +43,7 @@
          </TestableReference>
          <TestableReference
             skipped = "NO"
-            parallelizable = "YES">
+            parallelizable = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "FE3537AE2E830152007B0F25"
