pre fresh_testing_plan implementation

--- a/DaisyDos.xcodeproj/xcshareddata/xcschemes/DaisyDos.xcscheme
+++ b/DaisyDos.xcodeproj/xcshareddata/xcschemes/DaisyDos.xcscheme
@@ -42,8 +42,7 @@
             </BuildableReference>
          </TestableReference>
          <TestableReference
-            skipped = "NO"
-            parallelizable = "NO">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "FE3537AE2E830152007B0F25"
