--- a/DaisyDos/Info.plist
+++ b/DaisyDos/Info.plist
@@ -6,12 +6,27 @@
 	<array>
 		<string>remote-notification</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.daisydos.app</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>daisydos</string>
+			</array>
+		</dict>
+	</array>
 	<key>NSCalendarsUsageDescription</key>
 	<string>DaisyDos needs access to your calendar to show your events alongside tasks and habits for better daily planning.</string>
 	<key>NSRemindersUsageDescription</key>
 	<string>DaisyDos needs access to your reminders to integrate them with your tasks and habits for complete productivity management.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>DaisyDos needs access to your photo library to allow you to attach photos to your tasks and habits.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>DaisyDos needs access to your camera to allow you to take photos and attach them to your tasks and habits.</string>
 	<key>NSUserNotificationsUsageDescription</key>
 	<string>DaisyDos needs permission to send notifications to remind you about upcoming tasks and habit completions.</string>
 </dict>
